# lens-core.hs

./: cabal.project  lens-core.cabal
benchmarks/: folds.hs  traversals.hs
examples/: lens-examples.cabal
lens-properties/: lens-properties.cabal
lens-properties/src/Control/Lens/: Properties.hs
src/Control/: Lens.hs
src/Control/Lens/: Combinators.hs  Cons.hs  Empty.hs  Equality.hs  Extras.hs  Fold.hs  Getter.hs  Internal.hs  Iso.hs  Lens.hs  Plated.hs  Prism.hs  Reified.hs  Review.hs  Setter.hs  Traversal.hs  Tuple.hs  Type.hs  Wrapped.hs  Zoom.hs
src/Control/Lens/Internal/: Bazaar.hs  Coerce.hs  Context.hs  Deque.hs  Fold.hs  Getter.hs  Instances.hs  Iso.hs  Level.hs  Magma.hs  Prism.hs  Setter.hs  Zoom.hs
src/Control/Monad/Error/: Lens.hs
src/Data/Array/: Lens.hs
src/Data/Bits/: Lens.hs
src/Data/Dynamic/: Lens.hs
src/Data/Functor/: Contravariant.hs
src/Data/IntSet/: Lens.hs
src/Data/Profunctor/: Unsafe.hs
src/Data/Sequence/: Lens.hs
src/Data/Set/: Lens.hs
src/Data/Vector/: Lens.hs
src/Data/Vector/Generic/: Lens.hs
src/GHC/Generics/: Lens.hs
src/Numeric/: Lens.hs
src/Numeric/Natural/: Lens.hs
src/System/Exit/: Lens.hs
src/System/IO/Error/: Lens.hs
template/: lens-core-template.cabal
template/src/Control/Lens/: TH.hs
template/src/Control/Lens/Internal/: FieldTH.hs  PrismTH.hs  TH.hs
template/src/Language/Haskell/TH/: Lens.hs
template/tests/: T799.hs  templates.hs
tests/: properties.hs
